--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
+    "mongodb": "^3.5.5",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1"
   }
